snapshots/syntax/library/functions/financial/fv/fv_debug_print.snap
---
source: vb6parse/src/syntax/library/functions/financial/fv.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: Identifier
          text: Debug
        - kind: PeriodOperator
          text: "."
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"Future value: \""
        - kind: Whitespace
          text: " "
        - kind: Ampersand
          text: "&"
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Fv
        - kind: LeftParenthesis
          text: (
        - kind: SingleLiteral
          text: "0.05"
        - kind: Whitespace
          text: " "
        - kind: DivisionOperator
          text: /
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "12"
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "10"
        - kind: Whitespace
          text: " "
        - kind: MultiplicationOperator
          text: "*"
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "12"
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: SubtractionOperator
          text: "-"
        - kind: IntegerLiteral
          text: "200"
        - kind: RightParenthesis
          text: )
